# jira-mcp

./: .env.example  LICENSE  README.md  USAGE.md  pyproject.toml
.kiro/agents/: atlassian.json
.kiro/settings/: mcp.json
src/jira_confluence_mcp/: __init__.py  __main__.py  atlassian_client.py  config.py  confluence_tools.py  jira_tools.py  server.py
tests/: test_atlassian_client.py  test_config.py  test_confluence_tools.py  test_jira_tools.py
